# playground_py

./: .gitignore  setup.cfg
src/machine_learning/: hoeffding.py  perceptron_PLA.py  perceptron_pocket.py  perceptron_utils.py  temp.py
src/playground/: main.py
