[metadata]
name = playground
version = attr: playground.1.0.0
author = Sheldon Lee
author_email = sheldonldev@outlook.com
url = https://...
description = ...
long_description = file: README.md
long_description_content_type = text/markdown
keywords = playground, setuptools, test
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy

[options.entry_points]
console_scripts = 
    my-example-utility = playground.main:run

[options.extras_require]
notebook = jupyter>=1.0.0, matplotlib
dev = 
    mypy

[options.package_data]
example = data/schema.json, *.txt
* = README.m

